Fix recent entries scroll spacing and layout

--- a/src/pages/Genie.css
+++ b/src/pages/Genie.css
@@ -10,7 +10,7 @@
 .reading-log-container {
   position: absolute;
   left: 14rem;
-  top: 4rem;
+  top: 0rem;
 }
 
 .weather-widget {
